Beginning of Templates + Static Pages (#28)
* template cleanup and refactoring

* disqus

* Jaja's responsiveness changes

* security vulnerabilities

* Start of templates, modifications for deployment

* Finished error page templates, new article page, modified views file

* start of static pages

--- a/newspaper/templates/401.html
+++ b/newspaper/templates/401.html
@@ -2,5 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Unauthorized Access Placeholder</h1>
+  <h1>401: Unauthorized Access</h1>
+  <h3> Unfortunately, we can't let you access that page - but <a href="http://www.browndailyherald.com/">here's</a> some recent news you could take a look at instead!</h3>
+  <h3>Thank you for reading!</h3>
 {% endblock %}
