--- a/newspaper/templates/author.html
+++ b/newspaper/templates/author.html
@@ -2,5 +2,5 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-	<div id='article-component'></div>
+	<div id="authorInfo"></div>
 {% endblock %}
