--- a/newspaper/templates/section.html
+++ b/newspaper/templates/section.html
@@ -2,5 +2,5 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-	<div id='article-component'></div>
+	Section Content!
 {% endblock %}
